Upgrades and minor fixes